# EEGSpeech

./: CMakeLists.txt  speechtask.cpp
res/: ress.qrc
src/: inpout32.h  seriatrans.cpp  seriatrans.h  slsetting.cpp  slsetting.h  slsetting.ui  speechtask.cpp  speechtask.h  speechtask.ui  taskmanager.cpp  taskmanager.h  tcpsocket.cpp  tcpsocket.h
test/: CMakeLists.txt  main.cpp
